# gitnodes

./: .dockerignore  .editorconfig  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  SUPPORT.md  Trunk.toml  build.rs  deny.toml  index.html  install.ps1  install.sh  justfile  package-lock.json  package.json  tailwind.config.js  vercel-build.sh  vercel.json
.cargo/: audit.toml
.claude/: settings.json
.cursor/rules/: gitnodes.mdc
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/brain-app/: Cargo.toml  README.md
crates/brain-app/migrations/: 0002_projection_v2.sql  0003_projection_blob_sha.sql  0006_edges_kind.sql
crates/brain-app/src/: admin.rs  api.rs  app.rs  landing.rs  main.rs  markdown.rs
crates/brain-app/src/admin/: mod.rs  views.rs
crates/brain-app/src/api/: config_admin.rs  error.rs  file_ops.rs  files.rs  graph.rs  pull_requests.rs  search.rs  work_items.rs  write_orchestrator.rs
crates/brain-app/src/knowledge/: brain_switcher.rs  components.rs  config_loader.rs  detail_bar.rs  detail_panel.rs  draft.rs  editor.rs  filter_panel.rs  graph_canvas.rs  live_sync.rs  mod.rs  orphan_banner.rs  page.rs  pull_requests.rs  repo_structure.rs  runtime.rs  types.rs
crates/brain-app/src/knowledge/editor/: frontmatter.rs  location.rs  markdown.rs  mod.rs  related.rs
crates/brain-app/src/server/: access.rs  assets.rs  audit.rs  auth.rs  installation_token.rs  mod.rs  pending_sync_job.rs  projection.rs  routing.rs  runtime_config.rs  session.rs  sse.rs  target_registry.rs  webhook.rs
crates/brain-app/src/server/projection/: bulk_insert.rs  files.rs  migrations.rs  mod.rs  nodes.rs  pending_sync.rs  rebuild.rs  search.rs  sync_state.rs  target.rs  tests.rs  work_items.rs
crates/brain-app/style/: main.css  tailwind.css
crates/brain-auth/: Cargo.toml
crates/brain-auth/src/: lib.rs
crates/brain-domain/: Cargo.toml
crates/brain-domain/src/: config.rs  error.rs  lib.rs  types.rs  work_items.rs
crates/brain-graph/: Cargo.toml
crates/brain-graph/src/: layout.rs  lib.rs  parse.rs
crates/brain-storage/: Cargo.toml  README.md
crates/brain-storage/src/: atomic_rename.rs  git_transaction.rs  lib.rs
crates/brain-storage/src/git_transaction/: mod.rs
crates/brain-storage/tests/: git_transaction.rs
crates/brain-storage/tests/git_transaction/: mod.rs
crates/gitnodes-app/: Cargo.toml  LICENSE  README.md
crates/gitnodes-app/migrations/: 0001_baseline.sql  0004_search_fts.sql  0005_search_path_summary.sql
crates/gitnodes-app/src/: api.rs  app.rs  cli.rs  landing.rs  lib.rs  main.rs  markdown.rs  mcp.rs  validation.rs
crates/gitnodes-app/src/admin/: mod.rs  views.rs
crates/gitnodes-app/src/api/: config_admin.rs  error.rs  file_ops.rs  files.rs  graph.rs  pull_requests.rs  search.rs  work_items.rs  write_orchestrator.rs
crates/gitnodes-app/src/knowledge/: brain_switcher.rs  components.rs  config_loader.rs  detail_bar.rs  detail_panel.rs  draft.rs  filter_panel.rs  graph_canvas.rs  live_sync.rs  mermaid.rs  mod.rs  orphan_banner.rs  page.rs  pull_requests.rs  repo_structure.rs  runtime.rs  types.rs
crates/gitnodes-app/src/knowledge/editor/: frontmatter.rs  location.rs  markdown.rs  mod.rs  related.rs  tags.rs
crates/gitnodes-app/src/server/: access.rs  assets.rs  audit.rs  auth.rs  embedded.rs  health.rs  installation_token.rs  local.rs  mod.rs  pat.rs  pending_sync_job.rs  retention.rs  routing.rs  runtime_config.rs  session.rs  session_key.rs  sse.rs  target_registry.rs  webhook.rs  working_tree.rs
crates/gitnodes-app/src/server/projection/: bulk_insert.rs  files.rs  links.rs  migrations.rs  mod.rs  nodes.rs  pending_sync.rs  rebuild.rs  search.rs  sync_state.rs  target.rs  tests.rs  work_items.rs
crates/gitnodes-app/style/: main.css  tailwind.css
crates/gitnodes-auth/: Cargo.toml  README.md
crates/gitnodes-auth/src/: lib.rs
crates/gitnodes-domain/: Cargo.toml  README.md
crates/gitnodes-domain/src/: config.rs  error.rs  frontmatter.rs  lib.rs  types.rs  work_items.rs
crates/gitnodes-graph/: Cargo.toml  README.md
crates/gitnodes-graph/src/: layout.rs  lib.rs  parse.rs
crates/gitnodes-storage/: Cargo.toml  README.md
crates/gitnodes-storage/src/: atomic_rename.rs  lib.rs
crates/gitnodes-storage/src/git_transaction/: mod.rs
crates/gitnodes-storage/tests/: git_transaction.rs
crates/gitnodes-storage/tests/git_transaction/: mod.rs
docs/: API_REFACTOR_MEMORY.md  FEATURES.md  INSIGHTS_OMNIGRAPH_COMPARISON.md  OPERATOR_NOTES.md  PRESENTATION_DEMO.md  README.md  ROADMAP.md  ROADMAP_ARCHIVE.md
docs/guides/: CONFIGURATION.md  DEMO_DEPLOY.md  DEPLOYMENT.md  GETTING_STARTED.md
examples/demo-brain/: .gitnodes.yml  AGENTS.md  CLAUDE.md  README.md
examples/demo-brain/.cursor/: mcp.json
examples/demo-brain/bodies/: europa.md  jupiter.md  mars.md  saturn.md  titan.md
examples/demo-brain/concepts/: gravity-assist.md  radioisotope-power.md  tidal-heating.md
examples/demo-brain/discoveries/: europa-subsurface-ocean.md  titan-methane-cycle.md
examples/demo-brain/instruments/: atmos-probe.md  ice-radar.md  plume-sampler.md  spectro-imager.md
examples/demo-brain/missions/: ares-survey.md  lodestar.md  skyhook.md  tidewater.md
examples/starter-brain/: .gitnodes.yml  .mcp.json  AGENTS.md  CLAUDE.md  README.md
packaging/: README.md
packaging/homebrew/: gitnodes.rb.template
packaging/winget/: AndreaBozzo.GitNodes.installer.yaml.template  AndreaBozzo.GitNodes.locale.en-US.yaml.template  AndreaBozzo.GitNodes.yaml.template
scripts/: install.ps1  install.sh  rename-crates.sh  render-package-manifests.sh
src/: api.rs  app.rs  landing.rs  lib.rs  main.rs
src/knowledge/: data.rs  detail_bar.rs  detail_panel.rs  editor.rs  filter_panel.rs  graph_canvas.rs  mod.rs  page.rs  runtime.rs  types.rs
src/server/: auth.rs
style/: main.css  tailwind.css
(+18 files in other folders)
