[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2024"
publish = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
