[package]
name = "brain-domain"
version.workspace = true
edition.workspace = true
publish.workspace = true
description = "Pure domain types and errors for brain_ui. No leptos, no axum, no I/O."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
