[package]
name = "brain-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
readme = "README.md"
description = "Pure graph building + force-directed layout for brain_ui. No I/O."

[dependencies]
brain-domain = { path = "../brain-domain" }
serde_yaml = "0.9"
