[package]
name = "brain-storage"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
brain-domain = { path = "../brain-domain" }
brain-graph = { path = "../brain-graph" }
octocrab = "0.49"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
base64 = "0.22"
tracing = "0.1"
tokio = { version = "1", features = ["sync"] }
