[package]
name = "brain-storage"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
brain-domain = { path = "../brain-domain" }
brain-graph = { path = "../brain-graph" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
base64 = "0.22"
tracing = "0.1"
tokio = { version = "1", features = ["sync"] }
serde_json = "1"
