[package]
name = "gitnodes-domain"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
readme = "README.md"
description = "Pure domain types and errors for gitnodes. No leptos, no axum, no I/O."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
