[package]
name = "gitnodes-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
readme = "README.md"

[dependencies]
gitnodes-domain = { path = "../gitnodes-domain" }
gitnodes-graph = { path = "../gitnodes-graph" }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
base64 = "0.22"
tracing = "0.1"
tokio = { version = "1", features = ["sync"] }
serde_json = "1"
futures-util = { version = "0.3", default-features = false, features = ["std"] }

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["sync", "macros", "rt", "rt-multi-thread", "time"] }
